@@ -1312,8 +1312,13 @@ class Shell(cmd.Cmd):
     def print_static_result(self, column_names, rows, table_meta):
         if not column_names and not table_meta:
             return
+
         column_names = column_names or table_meta.columns.keys()
         formatted_names = [self.myformat_colname(name, table_meta) for name in column_names]
+        if not rows:
+            # print header only
+            self.print_formatted_result(formatted_names, None)
+            return
         formatted_values = [map(self.myformat_value, row.values()) for row in rows]
 
         if self.expand_enabled:
